--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: flask-container
-        image: garvitpathak27/hello-world-flask:latest
+        image: garvitpathak27/hello-world-flask:v2  # Updated version
         ports:
           - containerPort: 5000
         env:
